--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpeningTime": {
+    "StartAt": "00:00:00",
+    "FinishAt": "23:59:59"
+  }
 }
 
