--- a/DevFreela.API.csproj
+++ b/DevFreela.API.csproj
@@ -18,8 +18,23 @@
 
   <ItemGroup>
     <None Remove="Models\" />
+    <None Remove="DevFreela.Core\**" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="DevFreela.Core\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="DevFreela.Core\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="DevFreela.Core\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="DevFreela.Core\obj\DevFreela.Core.csproj.nuget.dgspec.json" />
+    <_ContentIncludedByDefault Remove="DevFreela.Core\obj\project.assets.json" />
+    <_ContentIncludedByDefault Remove="DevFreela.Core\obj\project.packagespec.json" />
   </ItemGroup>
 </Project>
