Finaliza aula: Camada Application - Parte 3

--- a/DevFreela.API.csproj
+++ b/DevFreela.API.csproj
@@ -37,4 +37,7 @@
     <_ContentIncludedByDefault Remove="DevFreela.Core\obj\project.assets.json" />
     <_ContentIncludedByDefault Remove="DevFreela.Core\obj\project.packagespec.json" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="DevFreela.Core\DevFreela.Core.csproj" />
+  </ItemGroup>
 </Project>
